RESOLVED FIXED56332
Removed more cases of DeprecatedPtr (exception, SmallStrings)
https://bugs.webkit.org/show_bug.cgi?id=56332
Summary Removed more cases of DeprecatedPtr (exception, SmallStrings)
Geoffrey Garen
Reported 2011-03-14 14:05:27 PDT
Removed more cases of DeprecatedPtr (exception, SmallStrings)
Attachments
Patch (16.79 KB, patch)
2011-03-14 14:12 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-03-14 14:12:15 PDT
Geoffrey Garen
Comment 2 2011-03-14 15:31:35 PDT
Note You need to log in before you can comment on or make changes to this bug.